--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Ahmad Abdelfattah</span> - <i>University of Tennessee, USA</i></li>
 <li><span style="color: #005f73;">Ashiq Anjum</span> - <i>University of Leicester, UK</i></li>
 <li><span style="color: #005f73;">Mauricio Araya-Polo</span> - <i>TotalEnergies E&P R&T, USA</i></li>
-<li><span style="color: #005f73;">Paolo	Bientinesi</span> - Umeå University, Sweden</li>
+<li><span style="color: #005f73;">Paolo	Bientinesi</span> - <i>Umeå University, Sweden</i></li>
 <li><span style="color: #005f73;">Patrick Carribault</span> - <i>CEA, France</i></li>
 <li><span style="color: #005f73;">Biagio Cosenza</span> - <i>University of Salerno, Italy</i></li>
 <li><span style="color: #005f73;">Stefano Corda</span> - <i>Huawei Technologies Switzerland</i></li>
@@ -219,13 +219,13 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Michael Ott</span> - <i>Leibniz Supercomputing Centre, Germany</i></li>	
 <li><span style="color: #005f73;">Radu Prodan</span> - <i>University of Innsbruck, Austria</i></li>
 <li><span style="color: #005f73;">Maria Patrou</span> - <i>Oak Ridge National Laboratory, USA</i></li>
-<li><span style="color: #005f73;">Dirk Pleiter</span> - University of Groningen, Netherlands</li>
+<li><span style="color: #005f73;">Dirk Pleiter</span> - <i>University of Groningen, Netherlands</i></li>
 <li><span style="color: #005f73;">Markus Rampp</span> - <i>Max Planck Computing and Data Facility, Germany</i></li>
 <li><span style="color: #005f73;">István Z. Reguly</span> - <i>Pázmány Péter Catholic University, Hungary</i></li>
 <li><span style="color: #005f73;">Filippo Spiga</span> - <i>NVIDIA, UK</i></li>
 <li><span style="color: #005f73;">Robert Schöne</span> - <i>Technische Universität Dresden, Germany</i></li>
 <li><span style="color: #005f73;">Fumiyoshi Shoji</span> - <i>RIKEN Center for Computational Science, Japan</i></li>
-<li><span style="color: #005f73;">Andy Turner</span> - University of Leeds, England</li>
+<li><span style="color: #005f73;">Andy Turner</span> - <i>University of Leeds, England</i></li>
 <li><span style="color: #005f73;">Ondřej Vysocký</span> - <i>IT4Innovations National Supercomputing Center, Czech Republic</i></li>	
 <li><span style="color: #005f73;">Xingfu Wu</span> - <i>Argonne National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Josef Weidendorfer</span> - <i>Technische Universität München, Germany</i></li>
