--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Diana Goehringer</span> - <i>Technische Universität Dresden, Germany</i></li>
 <li><span style="color: #005f73;">Bilel Hadri</span> - <i>KAUST Supercomputing Lab, Saudi Arabia</i></li>
 <li><span style="color: #005f73;">Daniel Hackenberg</span> - <i>Technische Universität Dresden, Germany</i></li>
+<li><span style="color: #005f73;">Toshihiro Hanawa</span> - <i>The University of Tokyo, Japan</i></li>	
 <li><span style="color: #005f73;">Georg Hager</span> - <i>Erlangen National High Performance Computing Center, Germany</i></li>
 <li><span style="color: #005f73;">Aleksandar Ilic</span> - <i>University of Lisbon, Portugal</i></li>
 <li><span style="color: #005f73;">Zoltan Kiss</span> - <i>Governmental IT Development Agency (KIFÜ), Hungary</i></li> 
