--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Frédéric Desprez</span> - <i>INRIA, France</i></li>
 <li><span style="color: #005f73;">Aditya Deshpande</span> - <i>Samsung Semiconductor, USA</i></li>
 <li><span style="color: #005f73;">Martin Frank</span> - <i>Karlsruhe Institute of Technology, Germany</i></li>
+<li><span style="color: #005f73;">Dietmar Fey</span> - <i>Friedrich-Alexander-Universität Erlangen-Nürnberg, Germany</i></li>
 <li><span style="color: #005f73;">Ryan E. Grant</span> - <i>Queen's University, Canada</i></li>
 <li><span style="color: #005f73;">William F Godoy</span> - <i>Oak Ridge National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Diana Goehringer</span> - <i>Technische Universität Dresden, Germany</i></li>
