--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Jacques-Charles Lafoucriere</span> - <i>CEA, France</i></li>	
 <li><span style="color: #005f73;">Erwin Laure</span> - <i>Max Planck Computing and Data Facility, Germany</i></li>
 <li><span style="color: #005f73;">Arthur F. Lorenzon</span> - <i>UFRGS, Brazil</i></li>
+<li><span style="color: #005f73;">Steven Martin</span> - <i>Hewlett Packard Enterprise, USA</i></li>
 <li><span style="color: #005f73;">Matthias Maiterth</span> - <i>Oak Ridge National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Rob Van Nieuwpoort</span> - <i>Leiden University, Netherlands</i></li>
 <li><span style="color: #005f73;">Michael Ott</span> - <i>Leibniz Supercomputing Centre, Germany</i></li>	
@@ -280,7 +281,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
     <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
 	<li>NEW this year: Special Journal Issue at IJHPCA</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
-    <li>47 committee members across 18 countries</li>
+    <li>48 committee members across 18 countries</li>
     <li>Others: TBA</li>
 </ul>
 
