--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
                                 <li>Submitted papers must be original and not previously published or under review elsewhere.</li>
                                 <li>Use the <a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" target="_blank">Springer Lecture Notes in Computer Science (LNCS) template</a>.</li>
                                 <li>Submit papers in PDF format through the ISC Linklings submission system at <a href="https://ssl.linklings.net/conferences/isc_hpc/?page=Submit&id=2ndInternationalWorkshoponEnergyEfficiencywithSustainablePerformanceTechniquesToolsandBestPracticesSubmission&site=ischpc2026" target="_blank">https://go-nhr.de/ISC26-EESP</a>.</li>
-								<li>AI-generated text, figures, images, or code are prohibited. AI systems cannot be credited as authors, and authors bear full responsibility for the accuracy and originality of all content.</li>
+								<li>AI-generated text, figures, images, or code are prohibited, and AI systems cannot be credited as authors.</li>
                             </ul>
                         </li>
                         <li><strong>Review Process</strong>
