--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Stefano Corda</span> - <i>Huawei Technologies Switzerland</i></li>
 <li><span style="color: #005f73;">Fabien Chaix</span> - <i>ICS-FORTH, Greece</i></li>
 <li><span style="color: #005f73;">Markus Diesmann</span> - <i>Forschungszentrum Jülich, Germany</i></li> 
+<li><span style="color: #005f73;">Jens Domke</span> - <i>RIKEN Center for Computational Science, Japan</i></li>
 <li><span style="color: #005f73;">Frédéric Desprez</span> - <i>INRIA, France</i></li>
 <li><span style="color: #005f73;">Aditya Deshpande</span> - <i>Samsung Semiconductor, USA</i></li>
 <li><span style="color: #005f73;">Martin Frank</span> - <i>Karlsruhe Institute of Technology, Germany</i></li>
@@ -282,7 +283,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
     <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
 	<li>NEW this year: Special Journal Issue at IJHPCA</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
-    <li>48 committee members across 18 countries</li>
+    <li>49 committee members across 18 countries</li>
     <li>Others: TBA</li>
 </ul>
 
