--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Toshihiro Hanawa</span> - <i>The University of Tokyo, Japan</i></li>	
 <li><span style="color: #005f73;">Georg Hager</span> - <i>Erlangen National High Performance Computing Center, Germany</i></li>
 <li><span style="color: #005f73;">Aleksandar Ilic</span> - <i>University of Lisbon, Portugal</i></li>
-<li><span style="color: #005f73;">Zoltan Kiss</span> - <i>Governmental IT Development Agency (KIFÜ), Hungary</i></li> 
+<li><span style="color: #005f73;">Zoltan Kiss</span> - <i>Digital Government Development and Project Management Ltd. (DKF), Hungary</i></li> 
 <li><span style="color: #005f73;">Jacques-Charles Lafoucriere</span> - <i>CEA, France</i></li>	
 <li><span style="color: #005f73;">Erwin Laure</span> - <i>Max Planck Computing and Data Facility, Germany</i></li>
 <li><span style="color: #005f73;">Arthur F. Lorenzon</span> - <i>UFRGS, Brazil</i></li>
