--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
 <li><span style="color: #005f73;">Ryan E. Grant</span> - <i>Queen's University, Canada</i></li>
 <li><span style="color: #005f73;">William F Godoy</span> - <i>Oak Ridge National Laboratory, USA</i></li>
 <li><span style="color: #005f73;">Diana Goehringer</span> - <i>Technische Universität Dresden, Germany</i></li>
+<li><span style="color: #005f73;">Gabriel Hautreux</span> - <i>National Computer Center for Higher Education (CINES), France</i></li>
 <li><span style="color: #005f73;">Bilel Hadri</span> - <i>KAUST Supercomputing Lab, Saudi Arabia</i></li>
 <li><span style="color: #005f73;">Daniel Hackenberg</span> - <i>Technische Universität Dresden, Germany</i></li>
 <li><span style="color: #005f73;">Toshihiro Hanawa</span> - <i>The University of Tokyo, Japan</i></li>	
@@ -283,7 +284,7 @@ While current tenders often emphasize raw hardware metrics, this workshop highli
     <li>Highest 3/3 score by 4 reviewers in ISC workshop proposal review</li>
 	<li>NEW this year: Special Journal Issue at IJHPCA</li>
     <li>Keynote by John Gustafson, ASU & Vq Research</li>
-    <li>49 committee members across 18 countries</li>
+    <li>50 committee members across 18 countries</li>
     <li>Others: TBA</li>
 </ul>
 
